k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ai-inference-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ai-inference-api

  template:
    metadata:
      labels:
        app: ai-inference-api

    spec:
      containers:
        - name: ai-inference-api
          image: ai-inference-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          resources:
            requests:
             memory: "512Mi"
             cpu: "250m"

            limits:
             memory: "1Gi"
             cpu: "500m"
