k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-inference-service

spec:
  selector:
    app: ai-inference-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: LoadBalancer
