k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-inference-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: ai.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-inference-service
            port:
              number: 80
